# metanfs4-build

./: .gitignore  .gitmodules  03.clean-all.sh  10.build-final.sh  CMakeClean.sh  CMakeLists.txt  README  README.md  metanfs4-build.files  repositories
